<resources>
    <string name="app_name">NERO</string>

    <string name="startButton">Start search</string>
    <string name="stopButton">Stop search</string>

    <string name="startBtn">Start</string>
    <string name="stopBtn">Stop</string>

    <string name="startSession">Start session</string>
    <string name="stopSession">Stop session</string>

    <string name="sessionsButton">All sessions</string>

    <string name="start_search">Start search</string>

    <string name="search">Подключение</string>
    <string name="signal">Signal</string>
    <string name="resist">Resistance</string>
    <string name="info">Информация</string>

    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>

    <string name="emotions">Emotions</string>
    <string name="calibrate">Calibrate</string>
    <string name="artifacted">Artifacted</string>
    <string name="not_artifacted">Not Artifacted</string>

    <string name="dev_state_title">State: </string>
    <string name="dev_power_title">Power: </string>

    <string name="dev_state_connected">Connected</string>
    <string name="dev_state_disconnected">Disconnected</string>
    <string name="dev_power_empty">-</string>
    <string name="dev_power_prc">%1$d%%</string>
    <string name="spectrum">Spectrum</string>
</resources>