<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.nero.ui.menu.MenuViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.menu.MenuFragment">

        <Button
            android:id="@+id/search_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:backgroundTint="#00ABC6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_signal"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/signal"
            android:visibility="gone"
            android:enabled="@{viewModel.connected}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_button" />

        <Button
            android:id="@+id/button_resist"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/resist"
            android:backgroundTint="@color/second_color"
            android:enabled="@{viewModel.connected}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_signal" />

        <Button
            android:id="@+id/button_emotions"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_color"
            android:text="Начать сессию"
            android:enabled="@{viewModel.connected}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_resist" />

        <Button
            android:id="@+id/button_spectrum"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/spectrum"
            android:enabled="@{viewModel.connected}"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_emotions" />

        <Button
            android:id="@+id/button_info"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:backgroundTint="@color/second_color"
            android:enabled="@{viewModel.connected}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_spectrum" />

        <Button
            android:id="@+id/button_current_reconect"
            android:visibility="gone"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:enabled="@{viewModel.hasDevice}"
            android:text="@{viewModel.connected ? @string/disconnect : @string/connect}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_info" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>